Borne essai équation

--- a/TP.ipynb
+++ b/TP.ipynb
@@ -652,7 +652,9 @@
    "source": [
     "## Exercice 4\n",
     "On veut dessiner des arbres obtenus récursivement, de la façon suivante:\n",
+    "\n",
     "![image](Arbres.png)\n",
+    "\n",
     "L'arbre de rang 0 (à gauche) est réduit à un segment vertical. Pour\n",
     "$n\\geqslant1$, l'arbre de rang $n$ est composé d'un segment vertical et\n",
     "de deux arbres de rang $n-1$ commençant chacun en haut du tronc, et\n",
@@ -823,20 +825,20 @@
    "source": [
     "print(generate(100))\n",
     "print(generate(200))\n",
-    "print(generate(500)) # soyez patient(e)"
+    "print(generate(800)) # soyez patient(e)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si vous optimisez le programme et que vous êtes trèèès patient(e), vous pourrez détecter que la valeur $k=51$ fournit aussi une solution&nbsp;:\n",
+    "Si vous avez optimisé le programme et que vous êtes assez patient(e) (entre 5 et 6 minutes pour un programme intelligemment optimisé, beaucoup plus sinon), vous détecterez que la valeur $k=51$ fournit aussi une solution&nbsp;:\n",
     "$$ 602^3 + 659^3 - 796^3 = 51.$$\n",
     "Mais il manque de nombreuses valeurs dans la liste ci-dessus. Les chercheurs ont en fait montré que l'équation a une solution pour **toute** valeur de $k$ entre 0 et 99, mais\n",
     "\n",
     "- on ne connaît pas d'algorithme prenant un entier $k$ en entrée et indiquant si l'équation $x^3+y^3+z^3=k$ a une solution.\n",
     "\n",
-    "- certaines valeurs de $k$ demandent des efforts mathématiques, algorithmiques et de programmation conséquents. C'est le cas pour les valeurs 33 et 42, dernières à avoir été résisté, et dont les plus petites solutions sont gigantesques&nbsp;:"
+    "- certaines valeurs de $k$ demandent des efforts mathématiques, algorithmiques et de programmation conséquents. C'est le cas pour les valeurs 33 et 42, dernières à avoir résisté, et dont les plus petites solutions sont gigantesques&nbsp;:"
    ]
   },
   {
